--- a/0620gpro1.html
+++ b/0620gpro1.html
@@ -9,7 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/framer-motion@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Mochiy+Pop+One&family=Noto+Sans+TC:wght@400;700;900&display=swap" rel="stylesheet">
-
+<link rel="icon" type="image/png" href="/gpo1.gihub.io/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/gpo1.gihub.io/favicon.svg" />
+<link rel="shortcut icon" href="/gpo1.gihub.io/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/gpo1.gihub.io/apple-touch-icon.png" />
+<link rel="manifest" href="/gpo1.gihub.io/site.webmanifest" />
     <style>
         body {
             background: linear-gradient(135deg, #1c3a70 0%, #4a2f6c 100%);
